# Test_Task

./: .azure-pipelines-pytest-webui-all.yml  .azure-pipelines.yml  .gitignore  Jenkinsfile  Jenkinsfile2  Jenkinsfile_pytest_webui_sandbox_all  Jenkinsfile_pytest_webui_sandbox_all_without_plugin  azure-pipelines.yml  commit_script_run.py  requirements.txt  simple_script_run.py  test.py  test_moblile3.py
Py_functionality_libs/: decorators.py  py_immutable.py  py_mysql_basic_connection.py  py_test.py  swager_yaml_get.yaml  test.py  test2.py  test2_basic001_args.py  test2_basic002_wrong_args.py  test2_basic003_multiply.py  test3.py
Robot_UI_Tests/: README.md
code_library/: List_longest_chain.py  factorial_via_recursion.py
jasmine_taf_ui/: Readme.md  package-lock.json  package.json  protractor.conf.js
js_playwright_demoqa_test/: Readme.md  package-lock.json  package.json  playwright.config.js
py_01_code_style_check/: Readme.md  py_t01_first_unique_char.py
py_different_test_task/: py_t01_first_unique_char.py
py_installer/: Readme.md  SayHello.py
pypi_test_package/substring_package/: Readme.md  pyproject.toml
pypi_test_package/substring_package/src/substring_package/: __init__.py  substring_functions.py
pypi_test_package/substring_package/src/substring_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pytest_api/: Readme.md  pytest_api_rest_get_task_one_pydantic.py  python_largest_number.py
pytest_bdd/: conftest.py
pytest_bdd_behave/: Readme.md
pytest_bdd_calculate/: README.md  calculator.py  conftest.py  requirements.txt  test_multiply.py
(+1266 files in other folders)
