[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "substring_package"
version = "0.1.2"
description = "A test substring helper package"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Sergei Smirnov", email = "ssn.spb@yandex.ru"}
]


dependencies = []